Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -191,7 +191,7 @@
    },
    "outputs": [],
    "source": [
-    "Str.Bool\"art.vandelay@vandelay.co\" # False"
+    "Str.Bool(True IF)\"art.vandelay@vandelay.co\" # False"
    ]
   },
   {
