--- a/index.ipynb
+++ b/index.ipynb
@@ -185,13 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-3da9b19b2614>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-3da9b19b2614>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "Str.Bool(True IF)\"art.vandelay@vandelay.co\" # False"
+    "Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\n",
+    "         \n",
+    "         "
    ]
   },
   {
