Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,22 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-6-3da9b19b2614>, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'Bool' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-3da9b19b2614>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-9f2e7e2dc0cd>\u001b[0m in \u001b[0;36masync-def-wrapper\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Bool' is not defined"
      ]
     }
    ],
    "source": [
-    "Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\n",
+    "##Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\n",
     "         \n",
-    "         "
+    "         help(Bool)"
    ]
   },
   {
