Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
    ],
    "source": [
     "##Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\n",
-    "         \n",
+    "         str.\n",
     "         help(str)"
    ]
   },
