Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -593,7 +593,7 @@
    ],
    "source": [
     "##Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\n",
-    "         str.endswith(.com')\n",
+    "         str.endswith('.com')\n",
     "         help(str)"
    ]
   },
