Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -201,7 +201,7 @@
     }
    ],
    "source": [
-    "##Str.Bool(True IF \"art.vandelay@vandelay.co\" # False\n",
+    "\"art.vandelay@vandelay.co\" # False\n",
     "         str.endswith('.com')\n",
     "         help(str)"
    ]
