--- a/index.ipynb
+++ b/index.ipynb
@@ -185,24 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "endswith() takes at least 1 argument (0 given)",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-13-85a60819583b>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-3a1d97532fb6>\u001b[0m in \u001b[0;36masync-def-wrapper\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m          \u001b[0mhelp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: endswith() takes at least 1 argument (0 given)"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-85a60819583b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    help(str)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "         str.endswith('.com')\n",
+    "str.endswith('.com')\n",
     "         help(str)"
    ]
   },
