--- a/index.ipynb
+++ b/index.ipynb
@@ -185,25 +185,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "endswith() takes at least 1 argument (0 given)",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-15-85a60819583b>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-0fbe1998bf08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\"art.vandelay@vandelay.co\"\u001b[0m \u001b[0;31m# False\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'.com'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m          \u001b[0;31m##help(str)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: endswith() takes at least 1 argument (0 given)"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-85a60819583b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    help(str)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\" # False\n",
-    "str.endswith('.com')\n",
-    "         ##help(str)"
+    "##\"art.vandelay@vandelay.co\" # False\n",
+    "##str.endswith('.com')\n",
+    "         help(str)"
    ]
   },
   {
