Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -592,7 +592,7 @@
     }
    ],
    "source": [
-    "##\"art.vandelay@vandelay.co\" # False\n",
+    "Email =\"art.vandelay@vandelay.co\" # False\n",
     "##str.endswith('.com')\n",
     "         help(str)"
    ]
