Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "Email = \"art.vandelay@vandelay.co\" # False\n",
+    "Email = str.endswith(\"art.vandelay@vandelay.co\") # False\n",
     "    str.endswith('.com')\n",
     "         help(str)"
    ]
