Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -199,7 +199,7 @@
    ],
    "source": [
     "Email = str.endswith(\"art.vandelay@vandelay.co\") # False\n",
-    "    str.endswith('.com')\n",
+    "   ## str.endswith('.com')\n",
     "         help(str)"
    ]
   },
