Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,8 +198,8 @@
     }
    ],
    "source": [
-    "Email = str.endswith(.com,\"art.vandelay@vandelay.co\") # False\n",
-    "   ## str.endswith('.com')\n",
+    "Email = str.(.c\"art.vandelay@vandelay.co\") # False\n",
+    "    str.endswith('.com')\n",
     "         ##help(str)"
    ]
   },
