--- a/index.ipynb
+++ b/index.ipynb
@@ -198,8 +198,8 @@
     }
    ],
    "source": [
-    "Email = str.(.c\"art.vandelay@vandelay.co\") # False\n",
-    "    str.endswith('.com')\n",
+    "mail =\"art.vandelay@vandelay.co\" # False\n",
+    "    Email.endswith('.com')\n",
     "         ##help(str)"
    ]
   },
