--- a/index.ipynb
+++ b/index.ipynb
@@ -185,21 +185,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-20-fb51dc02be12>, line 1)",
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-21-95e25e9ac9f5>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-fb51dc02be12>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Email = str.endswith(.com,\"art.vandelay@vandelay.co\") # False\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-21-95e25e9ac9f5>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    email.endswith('.com')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
    "source": [
-    "mail =\"art.vandelay@vandelay.co\" # False\n",
-    "    Email.endswith('.com')\n",
+    "email =\"art.vandelay@vandelay.co\" # False\n",
+    "    email.endswith('.com')\n",
     "         ##help(str)"
    ]
   },
