--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'"
+    "t = 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
