Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
    },
    "outputs": [],
    "source": [
-    "t = 'vandelay.com' # 'www.vandelay.com'"
+    "t = 'vandelay.com' # 'www.vandelay.com'\n",
+    "''"
    ]
   },
   {
