Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -214,15 +214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'www.vandelay.com'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "t = 'vandelay.com' # 'www.vandelay.com'\n",
-    "''"
+    "'www.' + t"
    ]
   },
   {
